--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <input type="submit" value="大力盘" id="pangci" button="" class="btn btn-primary" onclick="displayDate(this)">
                 <input type="submit" value="fastsoso" id="fastsoso" button="" class="btn btn-primary" onclick="displayDate(this)">
                 <input type="submit" value="猪猪盘" id="zhuzhupan" button="" class="btn btn-primary" onclick="displayDate(this)">
+                <input type="submit" value="酷搜" id="zhuzhupan" class="btn btn-primary" onclick="displayDate(this)">
                 <input type="submit" value="B站搜索" id="bilibili" button="" class="btn btn-primary" onclick="displayDate(this)">
                
             </div>
@@ -105,6 +106,8 @@
                 window.open("https://search.bilibili.com/all?keyword="+query);
             }else if(searchengine.value=="猪猪盘"){
                 window.open("http://www.zhuzhupan.com/search?query="+query);
+            }else if(searchengine.value=="酷搜"){
+                window.open("https://www.kolsou.com/search?q="+query);
             }
         }
 
