--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 window.open("https://www.sogou.com/web?query="+query);
             }else if(searchengine.value=="必应"){
                 window.open("http://cn.bing.com/search?q="+query);
-            }else if(searchengine.value=="谷歌学术"){
+            }else if(searchengine.value=="Magi"){
                 window.open("https://magi.com/search?q="+query);
             }else if(searchengine.value=="微信"){
                 window.open("http://weixin.sogou.com/weixin?query="+query);
@@ -106,7 +106,7 @@
             }else if(searchengine.value=="大力盘"){
                 window.open("https://www.dalipan.com/search?keyword="+query);
             }else if(searchengine.value=="fastsoso"){
-                window.open("https://www.fastsoso.cn/search?k="+query);
+                window.open("https://www.fastsoso.cn/search?k="+query+'&s=1&t=-1');
             }else if(searchengine.value=="B站搜索"){
                 window.open("https://search.bilibili.com/all?keyword="+query);
             }else if(searchengine.value=="猪猪盘"){
