--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             }else if(searchengine.value=="热榜搜"){
                 window.open("https://tophub.today/search?q="+query);
             }else if(searchengine.value=="极客搜索"){
-                window.open("https://s.geekbang.org/search/c=0/k="+query+'t=');
+                window.open("https://s.geekbang.org/search/c=0/k="+query+'/t=');
             }
 							    
         }
