--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             if(searchengine.value=="百度"){
                 window.open("https://www.baidu.com/s?wd="+query);
             }else if(searchengine.value=="dev谷歌"){
-                window.open("https://gg.ywg.workers.dev/search?q="+query);
+                window.open("https://search.sxisa.com/search?q="+query);
 	    }else if(searchengine.value=="谷歌"){
-                window.open("https://go.weihanli.xyz/search?q="+query);    
+                window.open("https://google.ywg.workers.dev/search?q="+query);    
 	    }else if(searchengine.value=="多吉"){
                 window.open("https://www.dogedoge.com/results?q="+query);  	    
             }else if(searchengine.value=="Yandex"){
