--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             align-content: center;
             /* margin: auto ; */
         }
+	.logo{
+		text-align:center;
+	 }
         .form-inline{
             text-align: center;
             margin: 130px auto 20px;
@@ -30,6 +33,9 @@
 <body>
 
     <div id="main">
+	    	<div class="logo">
+	    		<img src="https://nav.hiqq.com.cn/static/logo2.png">
+	    	</div>
 		<div id="searchid">		    
 	    	<div id="sform" class="form-inline" role="form">
 	    	        <input name="sears" id="search" type="text" placeholder="find it" autocomplete="off" class="form-control input-lg">
