--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
 	div.logo{
 		text-align:center;
-		margin:20px;
+		margin-top: 66px;
 	 }
         div#main{
 /*             height: 100vh; */
             display: flex;
             justify-content: center;
             align-content: center;
-            /* margin: auto ; */
+            margin-top: -80px;
         }
 
         .form-inline{
