--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             text-align: center;
             margin: 130px auto 20px;
         }
+	#search{
+            width: 90%;
+	    text-align: center;
+ 	    line-height: 32px;	
+	    height: 32px;
+	    font-size: 18px;	
+	}
         #searchengineitems{
             display: flex;
             justify-content: center;
