--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
             margin: 130px auto 20px;
         }
 	#search{
-            width: 90%;
+            width: 70%;
 	    text-align: center;
  	    line-height: 32px;	
 	    height: 32px;
 	    font-size: 18px;	
+	}
+	#searchengine{
+	    line-height: 32px;	
+	    height: 32px;	
 	}
         #searchengineitems{
             display: flex;
