--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
  	    line-height: 32px;	
 	    height: 32px;
 	    font-size: 18px;
-	    color: #999;
+	}
+	input::-webkit-input-placeholder { /* WebKit browsers */ 
+			color: #fafafa8a; 
+	} 
+	input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */ 
+			color: #fafafa8a; 
+	} 
+	input::-moz-placeholder { /* Mozilla Firefox 19+ */ 
+			color: #fafafa8a; 
+	} 
+	input:-ms-input-placeholder { /* Internet Explorer 10+ */ 
+			color: #fafafa8a; 
 	}
 	#searchengine{
 	    line-height: 32px;	
