--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,  minimum-scale=1.0">
     <title>搜多多</title>
     <style>
+	body{
+		background:url('https://api.uixsj.cn/bing/bing.php');
+	}
 	div.logo{
 		text-align:center;
 		margin-top: 66px;
@@ -31,18 +34,9 @@
 	    height: 32px;
 	    font-size: 18px;
 	}
-	input::-webkit-input-placeholder { /* WebKit browsers */ 
-			color: #fafafa8a; 
+	input:placeholder {
+	    color: #fafafa8a; 
 	} 
-	input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */ 
-			color: #fafafa8a; 
-	} 
-	input::-moz-placeholder { /* Mozilla Firefox 19+ */ 
-			color: #fafafa8a; 
-	} 
-	input:-ms-input-placeholder { /* Internet Explorer 10+ */ 
-			color: #fafafa8a; 
-	}
 	#searchengine{
 	    line-height: 32px;	
 	    height: 32px;	
