--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>搜多多</title>
     <style>
 	body{
-		background:url('https://api.uixsj.cn/bing/bing.php');
+		background:url('https://api.uixsj.cn/bing/bing.php') no-repeat;
+		background-size:cover;
+		width:100%;
+                height:100%;
+		overflow: hidden;
+		margin:0;
 	}
 	div.logo{
 		text-align:center;
@@ -46,7 +51,7 @@
             justify-content: center;
             flex-wrap: wrap;
         }
-        .pans,.jike{
+        .pans,.jike,.life{
             margin: 16px auto;
             text-align: center;
         }
@@ -106,6 +111,7 @@
             let code = e.keyCode;  
             if (code == 191 || code == 32) {
 		    document.getElementById("search").focus();  
+		    return false;
 	    }
         }
         function displayDate(id){
