--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,  minimum-scale=1.0">
     <title>搜多多</title>
     <style>
-	body{
+	body{	
+		font-family: "STKaiti", "Microsoft Yahei";
 		background:url('https://api.uixsj.cn/bing/bing.php') no-repeat;
 		background-size:cover;
 		width:100%;
@@ -50,6 +51,7 @@
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
+	    max-width: 800px;
         }
         .pans,.jike,.life{
             margin: 16px auto;
