--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,  minimum-scale=1.0">
-    <title>搜多多</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>罗网</title>
     <style>
-	body{	
+	html{	
 		font-family: "STKaiti";
 		background:url('https://api.uixsj.cn/bing/bing.php') no-repeat;
 		background-size:cover;
