--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
  	    line-height: 32px;	
 	    height: 32px;
 	    font-size: 18px;
+	    outline: none;
+	    border: none;
 	}
 	input:placeholder {
 	    color: #fafafa8a; 
