--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
     <script>
         window.onkeydown = function (e) {  
             let code = e.keyCode;  
-            if (code == 191 || code == 32) {
+            if (code == 191) {
 		    document.getElementById("search").focus();  
 		    return false;
-	    }
+	    	}
         }
         function displayDate(id){
             var searchengine=document.getElementById('searchengine');
