--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 window.open("https://github.com/search?q="+query);
             // 网盘部分
             }else if(searchengine.value=="大力盘"){
-                window.open("https://www.dalipan.com/search?keyword="+query);
+                window.open("https://www.dalipan.com/search?keyword="+query+"&time=3");
             }else if(searchengine.value=="fastsoso"){
                 window.open("https://www.fastsoso.cn/search?k="+query+'&s=1&t=-1');
             }else if(searchengine.value=="B站搜索"){
