--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             </div>
             <div class="pans">
                 <input type="submit" value="大力盘" id="pangci" button="" class="btn btn-primary" onclick="displayDate(this)">
+		<input type="submit" value="Day搜" id="pangci" button="" class="btn btn-primary" onclick="displayDate(this)">    
                 <input type="submit" value="fastsoso" id="fastsoso" button="" class="btn btn-primary" onclick="displayDate(this)">
                 <input type="submit" value="猪猪盘" id="zhuzhupan" button="" class="btn btn-primary" onclick="displayDate(this)">
                 <input type="submit" value="酷搜" id="zhuzhupan" class="btn btn-primary" onclick="displayDate(this)">
@@ -168,6 +169,8 @@
             // 网盘部分
             }else if(searchengine.value=="大力盘"){
                 window.open("https://www.dalipan.com/search?keyword="+query+"&time=3");
+	    }else if(searchengine.value=="Day搜"){
+                window.open("http://www.daysou.com/s?q="+query+"&start=0&isget=1&tp=all&cl=0&line=3");    
             }else if(searchengine.value=="fastsoso"){
                 window.open("https://www.fastsoso.cn/search?k="+query+'&s=1&t=-1');
             }else if(searchengine.value=="B站搜索"){
