--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 		        <input type="submit" value="百度" id="baidu" button="" class="btn btn-primary" onclick="displayDate(this)">
 <!-- 		        <input type="submit" value="dev谷歌" i="gogle" button="" class="btn btn-primary" onclick="displayDate(this)"> -->
 			<input type="submit" value="谷歌" id="google" button="" class="btn btn-primary" onclick="displayDate(this)">
+			<input type="submit" value="Google2" id="taobao" button="" class="btn btn-primary" onclick="displayDate(this)">
 			<input type="submit" value="多吉" id="duoji" button="" class="btn btn-primary" onclick="displayDate(this)">
 			<input type="submit" value="360搜索" id="duoji" button="" class="btn btn-primary" onclick="displayDate(this)">
 		        <input type="submit" value="Yandex" id="Yandex" button="" class="btn btn-primary" onclick="displayDate(this)">
@@ -85,7 +86,6 @@
 		    	<input type="submit" value="Magi" id="Magi" button="" class="btn btn-primary" onclick="displayDate(this)">
 		        <input type="submit" value="微信" id="weixin" button="" class="btn btn-primary" onclick="displayDate(this)">
 		        <input type="submit" value="京东" id="jd" button="" class="btn btn-primary" onclick="displayDate(this)">
-		        <input type="submit" value="淘宝" id="taobao" button="" class="btn btn-primary" onclick="displayDate(this)">
 		        <input type="submit" value="知乎" id="zhihu" button="" class="btn btn-primary" onclick="displayDate(this)">
 		        <input type="submit" value="微博" id="weibo" button="" class="btn btn-primary" onclick="displayDate(this)">
 		        <input type="submit" value="豆瓣" id="douban" button="" class="btn btn-primary" onclick="displayDate(this)">
@@ -140,6 +140,8 @@
                 window.open("https://search.sxisa.com/search?q="+query);
 	    }else if(searchengine.value=="谷歌"){
                 window.open("https://google.ywg.workers.dev/search?q="+query);    
+	    }else if(searchengine.value=="Google2"){
+                window.open("https://www.sanzhima.com/search?q="+query);	    
 	    }else if(searchengine.value=="多吉"){
                 window.open("https://www.dogedoge.com/results?q="+query);  
 	    }else if(searchengine.value=="360搜索"){
