--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
 
 	    </div>
     </div>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
+    <script type="text/javascript">
+	$('#main').fireworks({ 
+	  sound: false, 
+	  opacity: 0.9, 
+	  width: '100%', 
+	  height: '100%' 
+	});
+	
+    </script>										 
     <script>
         window.onkeydown = function (e) {  
             let code = e.keyCode;  
