--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
     </style>
 </head>
 <body>
-<!--     <div class="logo">
-         <img src="https://nav.hiqq.com.cn/static/logo2.png">
-    </div> -->
+
     <div id="main">
 		
 		<div class="animate">		    
@@ -116,7 +114,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
     <script type="text/javascript">
-	$('#animate').fireworks({ 
+	$('.animate').fireworks({ 
 	  sound: false, 
 	  opacity: 0.9, 
 	  width: '100%', 
