--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		margin:0;
 	}
 	.animate{
-	    z-index:-99;
+	    z-index:-99 !important;
 	    }
         div#main{
             display: flex;
@@ -116,7 +116,7 @@
     <script type="text/javascript">
 	$('.animate').fireworks({ 
 	  sound: false, 
-	  opacity: 0.9, 
+	  opacity: 0.6, 
 	  width: '100%', 
 	  height: '100%' 
 	});
