--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
         } 
   	
     </script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
+<!--       <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
     <script type="text/javascript">
 	$('.animate').fireworks({ 
 	  sound: false, 
@@ -222,6 +222,7 @@
 	  height: '60%' 
 	});
 	
-    </script>									      
+    </script>	
+				  -->
 </body>
 </html>
