--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
 
     <div id="main">
-			    
+		<div id="searchid">	    
 	    	<div id="sform" class="form-inline" role="form">
 	    	        <input name="sears" id="search" type="text" placeholder="find it" autofocus onfocus="this.placeholder=''" onblur="this.placeholder='find it'" autocomplete="off" class="form-control input-lg">
 	    	        <button id="searchengine" value="百度" onclick="FindData();">百度</button>
@@ -208,17 +208,17 @@
         } 
   	
     </script>
-<!--       <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
     <script type="text/javascript">
-	$('.animate').fireworks({ 
+	$('.life').fireworks({ 
 	  sound: false, 
-	  opacity: 0.6, 
+	  opacity: 0.2, 
 	  width: '100%', 
 	  height: '60%' 
 	});
 	
     </script>	
-				  -->
+				  
 </body>
 </html>
