--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
 		background:url('https://api.uixsj.cn/bing/bing.php') no-repeat;
 		background-size:cover;
 		width:100vw;
-                height:100vh;
+        height:100vh;
 		background-position: center top;
 		margin:0;
 	}
-        div#main{
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            margin-top: -80px;
-        }
-
-        .form-inline{
-            text-align: center;
-            margin: 130px auto 20px;
-        }
+    div#main{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        margin-top: -80px;
+    }
+    .form-inline{
+        text-align: center;
+        margin: 130px auto 20px;
+    }
 	#search{
             width: 70%;
 	    text-align: center;
@@ -43,16 +42,16 @@
 	    line-height: 32px;	
 	    height: 32px;	
 	}
-        #searchengineitems{
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-	    max-width: 800px;
-        }
-        .pans,.jike,.life{
-            margin: 16px auto;
-            text-align: center;
-        }
+    #searchengineitems{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+	max-width: 800px;
+    }
+    .pans,.jike,.life{
+        margin: 16px auto;
+        text-align: center;
+    }
     </style>
 </head>
 <body>
@@ -68,7 +67,7 @@
 		<div id="searchengineitems">
 		        <input type="submit" value="百度" id="baidu" button="" class="btn btn-primary" >
 <!-- 		        <input type="submit" value="dev谷歌" i="gogle" button="" class="btn btn-primary" onclick="displayDate(this)"> -->
-			<input type="submit" value="谷歌" id="google" button="" class="btn btn-primary" >
+			<input type="submit" value="谷歌" id="google" class="btn btn-primary" >
 			<input type="submit" value="Google2" id="taobao" button="" class="btn btn-primary" >
 			<input type="submit" value="多吉" id="duoji" button="" class="btn btn-primary" >
 			<input type="submit" value="360搜索" id="duoji" button="" class="btn btn-primary" >
@@ -94,8 +93,8 @@
 	    <div class="jike">
                 <input type="submit" value="极客搜索" class="btn btn-primary"> 
 		<input type="submit" value="开发者头条" id="tophub" class="btn btn-primary">
-		<input type="submit" value="阿里云" class="btn btn-primary" onclick="displayDate(this)">    
-		<input type="submit" value="腾讯云" class="btn btn-primary" onclick="displayDate(this)">											  
+		<input type="submit" value="阿里云" class="btn btn-primary" >    
+		<input type="submit" value="腾讯云" class="btn btn-primary">											  
                 <input type="submit" value="Github" id="Github" class="btn btn-primary" >	
 		<input type="submit" value="鱼塘搜索" id="fish" class="btn btn-primary" >
 		<input type="submit" value="V2" id="Github" button="" class="btn btn-primary" >
@@ -119,15 +118,16 @@
 		    return false;
 	    	}
         }
-	var items = document.getElementsByClassName('.items');
-        items.addEventListener('click',function displayDate(event){
+	var items = document.getElementsByClassName('items')[0];
+        items.addEventListener('click',function(event){
 	    event = event || window.event;
-            if (event.target && event.target.className == 'btn') {
+            if (event.target.className == 'btn btn-primary') {
             	let searchengine=document.getElementById('searchengine');
-            	searchengine.innerHTML=event.value;
-            	searchengine.value=event.value;
-	    }
-        }
+                let value = event.target.value;
+            	searchengine.innerHTML=value;
+            	searchengine.value=value;
+	        }
+        },false);
         
         function FindData(){
             var search=document.getElementById('search');
@@ -215,17 +215,16 @@
         } 
   	
     </script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
     <script type="text/javascript">
-	$('.life').fireworks({ 
+	$(document.getElementsByClassName('life')[0]).fireworks({ 
 	  sound: false, 
 	  opacity: 0.2, 
 	  width: '100%', 
-	  height: '60%' 
+	  height: '60px' 
 	});
-	
-    </script>	
+	  </script>	 -->
 				  
 </body>
 </html>
