--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
 		    	<input type="submit" value="Magi" id="Magi" button="" class="btn btn-primary" >
 		        <input type="submit" value="微信" id="weixin" button="" class="btn btn-primary" >	        
 		        <input type="submit" value="知乎" id="zhihu" button="" class="btn btn-primary" >
-		        <input type="submit" value="微博" id="weibo" button="" class="btn btn-primary" >
-		        <input type="submit" value="豆瓣" id="douban" button="" class="btn btn-primary">
                         <input type="submit" value="贴吧" button="" class="btn btn-primary">
             </div>
             <div class="pans">
@@ -104,6 +102,8 @@
 	    <div class='life'>
 	    	<input type="submit" value="神马" id="duoji" button="" class="btn btn-primary" >
 		<input type="submit" value="头条" id="duoji" button="" class="btn btn-primary" >
+		<input type="submit" value="微博" id="weibo" button="" class="btn btn-primary" >
+		<input type="submit" value="豆瓣" id="douban" button="" class="btn btn-primary">
                 <input type="submit" value="值得买" id="duoji" button="" class="btn btn-primary">
 	        <input type="submit" value="京东" id="jd" button="" class="btn btn-primary" >															 
 
@@ -137,7 +137,7 @@
             if(searchengine.value=="百度"){
                 window.open("https://www.baidu.com/s?wd="+query+" -广告 -推广");
             }else if(searchengine.value=="Searx"){
-                window.open("https://searx.gnu.style/?q="+query);
+                window.open("https://wiby.org/?q="+query);
 	    }else if(searchengine.value=="dev谷歌"){
                 window.open("https://search.sxisa.com/search?q="+query);
 	    }else if(searchengine.value=="谷歌"){
