--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 		<div class="items">		
 		<div id="searchengineitems">
 		        <input type="submit" value="百度" id="baidu" class="btn btn-primary" >
+			<input type="submit" value="秘迹" class="btn btn-primary" >
 		        <input type="submit" value="Searx" class="btn btn-primary">
 			<input type="submit" value="谷歌" id="google" class="btn btn-primary" >
 			<input type="submit" value="Google2" id="taobao" button="" class="btn btn-primary" >
@@ -81,6 +82,7 @@
             </div>
             <div class="pans">
                 <input type="submit" value="大力盘" id="pangci" class="btn btn-primary" >
+		<input type="submit" value="飞飞盘" class="btn btn-primary" 
 		<input type="submit" value="搜云" class="btn btn-primary" >
 		<input type="submit" value="Day搜" id="pangci" class="btn btn-primary" >    
                 <input type="submit" value="fastsoso" id="fastsoso" class="btn btn-primary" >
@@ -88,6 +90,7 @@
                 <input type="submit" value="酷搜" id="zhuzhupan" class="btn btn-primary" >
                 <input type="submit" value="B站搜索" id="bilibili" class="btn btn-primary" >
                 <input type="submit" value="热榜搜" class="btn btn-primary" > 
+		<input type="submit" value="谷歌云" class="btn btn-primary" >
             </div>
 	    <div class="jike">
                 <input type="submit" value="极客搜索" class="btn btn-primary"> 
@@ -108,6 +111,13 @@
 	        <input type="submit" value="京东" id="jd" button="" class="btn btn-primary" >															 
 
 	    </div>
+	    <div class='bt'>
+	    	<input type="submit" value="种子吧" id="duoji" button="" class="btn btn-primary" >
+		<input type="submit" value="超人搜索" id="duoji" button="" class="btn btn-primary" >
+<!-- 		<input type="submit" value="微博" id="weibo" button="" class="btn btn-primary" > -->
+<!-- 		<input type="submit" value="豆瓣" id="douban" button="" class="btn btn-primary">														  -->
+
+	    </div>	    
 	</div>
     </div>
 										 
@@ -136,7 +146,9 @@
             var query=search.value;
             if(searchengine.value=="百度"){
                 window.open("https://www.baidu.com/s?wd="+query+" -广告 -推广");
-            }else if(searchengine.value=="Searx"){
+            }else if(searchengine.value=="秘迹"){
+                window.open(`https://m.mijisou.com/?q=${query}&category_general=on&time_range=&language=zh-CN&pageno=1`);
+	    }else if(searchengine.value=="Searx"){
                 window.open("https://wiby.org/?q="+query);
 	    }else if(searchengine.value=="dev谷歌"){
                 window.open("https://search.sxisa.com/search?q="+query);
@@ -177,6 +189,8 @@
             // 网盘部分
             }else if(searchengine.value=="大力盘"){
                 window.open("https://www.dalipan.com/search?keyword="+query+"&time=3");  
+	    }else if(searchengine.value=="飞飞盘"){
+                window.open("https://www.feifeipan.com/search?keyword="+query); 
 	    }else if(searchengine.value=="搜云"){
                 window.open("https://www.wosouyun.com/wd/"+query); 	
 	    }else if(searchengine.value=="罗马盘"){
@@ -193,6 +207,9 @@
                 window.open("https://www.kolsou.com/search?q="+query);
             }else if(searchengine.value=="热榜搜"){
                 window.open("https://tophub.today/search?q="+query);
+	    }else if(searchengine.value=="谷歌云"){
+                window.open(`https://zhao.pp.ua/?q=${query}&Hm_lvt_3c8d74f5719912f7fa51a5e9d1ec8096=1633230532137|1600658682,1601653141&version=1.0.1&Hm_lpvt_3c8d74f5719912f7fa51a5e9d1ec8096=1601694532
+`);
 	    }else if(searchengine.value=="极客搜索"){
                 window.open("https://s.geekbang.org/search/c=0/k="+query+'/t=');
             }else if(searchengine.value=="开发者头条"){
@@ -209,6 +226,12 @@
                 window.open("https://m.toutiao.com/search?keyword="+query);
 	    }else if(searchengine.value=="值得买"){
                 window.open("https://search.smzdm.com/?c=home&s="+query+"&v=b");
+	    }
+		
+	    else if(searchengine.value=="种子吧"){
+                window.open("http://zhongzi8.xyz/search?wd="+query);
+	    }else if(searchengine.value=="超人搜索"){
+                window.open("https://www.ichaoren.xyz/search.html?name="+query);
 	    }
 							    
         }
